<?xml version="1.0"?>
<package format="2">
  <name>slang</name>
  <version>1.0.1</version>
  <description>Text understanding with RASA</description>

  <maintainer email="kwp@miami.edu">Kasia Pasternak</maintainer>
  <maintainer email="zishi@cs.miami.edu">Zishi Wu</maintainer>

  <license>WTFPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
